client/lene-todo-app/src/index.css
/* ... */
html, body, #root {
    min-width: fit-content;
}

:root {
    --primary-color: #0abd6c;
    --secondary-color: #20d885;
}


.spacer {
    height: 89px;
    max-width: 100%;
    margin-bottom: 30px;
}

/* List styling */

.list-info-container {
    background: rgb(255, 255, 255);
    display: grid;
    justify-items: center;
    align-items: center;
    grid-template-columns: 1fr auto 1fr;
    padding: 20px;
    border-radius: 10px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
    position: relative;
    margin: auto 20px;
    border-bottom: 2px solid transparent;
    text-align: center;
}

.list-info-container .under-text {
    color: rgb(145, 145, 145);
}

.list-info-container .list-title  {
    background: var(--primary-color);
    background: linear-gradient(to right, var(--primary-color) 50%, #44ffab 100%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* Custom Dropdown */

.select-wrapper {
    display: grid;
    place-items: center;
    gap: 20px;
}

select {
    font-size: 20px;
    letter-spacing: 1px;
    padding: 10px 40px 10px 20px;
    background: var(--primary-color);
    color: white;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    transition: .3s;
}

select:active,
select:focus,
select:hover {
    border: none;
    outline: none;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.custom-select {
    position: relative;
}

.custom-arrow {
    position: absolute;
    top: 0;
    right: 0;
    background: var(--primary-color);
    display: block;
    height: 1rem;
    width: 3rem;
    height: 100%;
    pointer-events: none;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.custom-arrow::before,
.custom-arrow::after {
    --size: 8px;
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    left: 50%;

    transform: translate(-50%, -50%);
}

.custom-arrow::before {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-bottom: var(--size) solid rgba(255, 255, 255, 0.7);
    top: 35%;
}

.custom-arrow::after {
    border-left: var(--size) solid transparent;
    border-right: var(--size) solid transparent;
    border-top: var(--size) solid rgba(255, 255, 255, 0.7);
    top: 65%;
}

.custom-select-button {
    width: 200px;
    border-radius: 30px;
    border: 2px solid transparent;
    padding: 10px;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 16px;
    color: rgb(255, 255, 255);
    background: rgb(0, 195, 255);
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
    cursor: pointer;
    outline: none;
    transition: box-shadow .4s ease;
}

.custom-select-button:hover {
    box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 10px;
    background: rgb(0, 145, 189);
}

.custom-select-button:focus {
    border: 2px solid black;
}

/* Add List elements show hide */
.add-list-form {
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-color: white;
    margin: 60px auto;
    width: 100px;
    gap: 25px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
  }

  .add-list-form[data-isopen="true"] {
    width: clamp(300px, 60%, 600px);
    border-radius: 10px;
    padding: 20px 60px 20px 60px;
  }



.add-list-form-title {
    text-align: center;
    font-weight: 700;
    font-size: 30px;
    color: var(--primary-color)
}

.add-list-form-container {
    position: relative;
    display: flex;
    width: 100%;
    align-items: center;
}

.add-list-form input {
    width: 100%;
    padding: 10px 15px;
    border: 1px solid rgb(136, 136, 136);
    background-color: white;
    font-size: 16px;
    font-weight: 400;
    transition: 300ms ease;
    border-radius: 5px;
}

.add-list-form input:focus {
    outline: none;
    border-color: var(--primary-color);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.add-list-form input:hover {
    border: 1px solid var(--primary-color);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.add-list-form label {
    position: absolute;
    display: flex;
    align-items: center;
    height: 50%;
    left: 10px;
    padding: 0 5px;
    transition: 300ms ease;
    pointer-events: none;
    font-size: 16px;
}

.add-list-form-container input:focus + label, 
.add-list-form-container input:valid + label {
    transform: translateY(-100%);
    color: var(--primary-color);
    font-size: 14px;
    background-color: white;
}

.add-list-form button {
    width: 100%;
    border-radius: 30px;
    border: 2px solid transparent;
    padding: 10px;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 16px;
    color: rgb(255, 255, 255);
    background: var(--secondary-color);
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
    cursor: pointer;
    outline: none;
    transition: box-shadow .4s ease;
}

.add-list-form button:hover {
    box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 10px;
    background: #0eb368;
}

.add-list-form button:focus {
    border: 2px solid black;
}

/* Icons */

.buttons-container {
    display: flex;
    width: 100%;
    justify-content: center;
}

.button-container {
    width: clamp(100px, 20%, 200px);
    padding: 15px;
    margin: 20px;
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    border-radius: 10px;
    color:rgb(180, 180, 180);
    font-size: 16px;
    transition: all .2s ease;
    cursor: pointer;
    user-select: none;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
}

.button-container:hover {
    transform: scale(1.2);
    color: black;
}
.button-container:active {
    transform: scale(1);
}
/* ... */

